// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: DocHeading correctly formats title 1`] = `
<div
  className="view-heading"
>
  <h1>
    Test Test
  </h1>
</div>
`;

exports[`Utilities: DocHeading renders heading and updates document title 1`] = `
<div
  className="view-heading"
>
  <h1>
    Test
  </h1>
</div>
`;
